# CaseFA

./: LICENSE  README.md  config.yaml  credentials.toml  pyproject.toml
app/: auth.py  gl_operation.py  initDB.py  main.py  modify_case_code.py  syncEasData.py  syncRemoteData.py  syncSciaData.py  utils.py
app/connectivity/: SOAP.py  db_conn.py
app/custom_pages/: case_fee_recon.py  case_gl_balance.py  case_refund.py  case_rem.py  intro.py  monthly_revenue.py  utils.py
