[tool.poetry]
name = "casefa"
version = "0.1.0"
description = "Personal workflow using streamlit, SqlAlchemy and zeep"
authors = ["xzrokeman <xzrokeman@163.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
streamlit = "1.30.0"
streamlit-authenticator = "^0.2.3"
pandas = "^2.1.4"
SQLAlchemy = "^2.0.23"
zeep = "^4.2.1"
numpy = "^1.26.2"
xmltodict = "^0.13.0"
pymysql = "^1.1.0"
polars = "^0.20.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
